[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.19.3" }
yew-router = "0.16"
yewdux = "0.7"
wasm-bindgen = "0.2"
web-sys = "0.3.56"
reqwasm = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
gloo-timers = "0.2.3"
wasm-logger = "0.2.0"
log = "0.4.6"
serde_json = "1.0.79"
js-sys = "0.3.56"
gloo-utils = "0.1.2"